kubeConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress-kube-spring-hello
  namespace: kube-spring-namespace
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: my-service-talk-to-kube-spring-hello
                port:
                  number: 80
            path: /
            pathType: Prefix
